--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "typecheck": "tsc --noEmit",
-    "postinstall": "patch-package"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
@@ -42,7 +41,6 @@
     "framer-motion": "^11.1.7",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
-    "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -52,7 +50,8 @@
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
     "three": "^0.160.0",
-    "react-globe.gl": "^2.27.2"
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/drei": "^9.109.2"
   },
   "devDependencies": {
     "@types/node": "^20",
