--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "framer-motion": "^11.1.7",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.5.1",
     "next": "15.3.3",
@@ -57,6 +58,7 @@
     "@react-three/drei": "^9.109.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20",
     "@types/react": "^18",
